# taifya-course-work

./: Cargo.toml  README.md  file.l
compiler-cli/: Cargo.toml  file.l
compiler-cli/src/: cli.rs  main.rs  rlpl.rs  rppl.rs
compiler-core/: Cargo.toml
compiler-core/src/: ast.rs  build.rs  compiler.rs  diagnostic.rs  environment.rs  error.rs  lib.rs  line_numbers.rs  token.rs  value.rs  warning.rs
compiler-core/src/analyzer/: error.rs  mod.rs  tests.rs
examples/: add.l  digit_out_of_radix.l  expected_semicolon.l  file.l  hello_world.l  invalid_assignment.l  missing_begin.l  missing_comment_end.l  missing_end.l  missing_string_end.l  numbers.l  readln.l  strings.l  test.l  test_file.l  unreachable_code.l  unrecognized_token.l  warnings.l  while.l
lang-core/: Cargo.toml
lang-core/src/: lib.rs
lang-core/src/analyzer/: analyzer.rs  error.rs  mod.rs  tests.rs
lang-core/src/codegen/: codegen.rs  mod.rs  variable.rs
lang-core/src/environment/: environment.rs  mod.rs  value.rs
lang-core/src/eval/: mod.rs  tests.rs
lang-core/src/lexer/: error.rs  lexer.rs  mod.rs  tests.rs  token.rs
lang-core/src/parser/: ast.rs  error.rs  mod.rs  parser.rs  tests.rs
lang-core/src/utils/: diagnostic.rs  error.rs  src_span.rs  warning.rs
langc/: Cargo.toml
langc/src/: cli.rs  compiler.rs  main.rs  rlpl.rs  rppl.rs
src/: lib.rs  main.rs  rlpl.rs  rppl.rs  token.rs
src/ast/: mod.rs  primitive.rs
src/eval/: error.rs  mod.rs  tests.rs
src/lexer/: error.rs  mod.rs  tests.rs
src/object/: environment.rs  object.rs
src/parser/: error.rs  mod.rs  tests.rs
(+12 files in other folders)
